UIMA-518
browser launching improvements. Checks most common available browsers and try to launch them.

https://issues.apache.org/jira/browse/UIMA-518

git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@660887 13f79535-47bb-0310-9956-ffa450edef68